<?xml version="1.0"?>
<package format="3">
  <name>waterlinked_a50</name>
  <description>ros2 driver</description>

  <version>0.0.11</version>
  <license>BSD</license>
  <author>Tim Hansen</author>
  <maintainer email="t.hansen@jacobs-university.de">Tim Hansen</maintainer>



  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
